--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Shared/_Layout.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Shared/_Layout.cshtml
@@ -13,11 +13,34 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+    <meta name="keywords" content="Portfolio,Free Web Protfolio,Free Web Protfolio and Admin Panel">
+    <meta name="author" content="Nofel Salahov">
 
     <title>@ViewData["Title"]</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
+
+    <!-- Primary Meta Tags -->
+    <title>Free Web Portfolio, Register then have your Portfolio.</title>
+    <meta name="title" content="Free Web Portfolio, Register then have your Portfolio.">
+    <meta name="description" content="Register then have your Portfolio and Admin Panel managed.  Create Your
+Blog, Portfolio, Services, Achievements, and References ">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://uversalfilo.site/">
+    <meta property="og:title" content="Free Web Portfolio, Register then have your Portfolio.">
+    <meta property="og:description" content="Register then have your Portfolio and Admin Panel managed.  Create Your
+Blog, Portfolio, Services, Achievements, and References ">
+    <meta property="og:image" content="https://i.postimg.cc/G2fKBzS4/Domainrain.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="http://uversalfilo.site/">
+    <meta property="twitter:title" content="Free Web Portfolio, Register then have your Portfolio.">
+    <meta property="twitter:description" content="Register then have your Portfolio and Admin Panel managed.  Create Your
+Blog, Portfolio, Services, Achievements, and References ">
+    <meta property="twitter:image" content="https://i.postimg.cc/G2fKBzS4/Domainrain.png">
 
     <!-- Favicons -->
     <link href="~/img/uversalfilo.png" rel="icon">
