--- a/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/SinglePage.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Views/Home/SinglePage.cshtml
@@ -139,7 +139,7 @@
                                                     @if (item.User.UserName == User.Identity.Name)
                                                     {
                                                         <a class="dropdown-item btn-update text-center" href="#" data-toggle="modal" data-target="#UpdatCommentModalCenter" data-id="@item.Id"><i class="ti-pencil"></i> Edit</a>
-                                                        <a class="dropdown-item text-danger text-center" href="#"><i class="ti-trash"></i>Delete</a>
+                                                        <a class="dropdown-item text-danger text-center delete-btn" href="/Comment/Delete/@item.Id"><i class="ti-trash"></i>Delete</a>
                                                     }
                                                     else
                                                     {
@@ -533,8 +533,57 @@
 
     @* Comment Edit POST *@
 
-    <script>
 
+
+
+    <script>
+        $(document).ready(function () {
+            $(document).on('click', '.delete-btn', function (e) {
+                e.preventDefault();
+                let url = $(this).attr("href");
+                let element = this.parentElement.parentElement.parentElement.parentElement;
+                var __RequestVerificationToken = $("input[name='__RequestVerificationToken']").val();
+                Swal.fire({
+                    title: 'Are You Sure Delete?',
+                    text: "Unable to return after deletion!",
+                    type: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Delete',
+                    cancelButtonText: 'Cancel'
+                }).then((result) => {
+                    if (result.value) {
+                        $.ajax({
+                            url: url,
+                            type: "get",
+                            beforeSend: function (request) {
+                                request.setRequestHeader('RequestVerificationToken', $("input[name='__RequestVerificationToken']").val());
+                            },
+                            dataType: "json",
+                            success: function (response) {
+                                if (response.status == 201) {
+                                    Swal.fire(
+                                        'Deleted!',
+                                        '',
+                                        'success'
+                                    )
+                                    element.innerHTML = '';
+                                }
+                                else
+                                {
+                                    Swal.fire(
+                                        'Don"t Deleted',
+                                        '',
+                                        'error'
+                                    )
+                                }
+                            }
+                        });
+                    }
+                })
+            });
+        })
     </script>
 
     <script src = "~/Admin/assets/js/popper.min.js" ></script>
