--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Portfolio/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Portfolio/Create.cshtml
@@ -2,30 +2,20 @@
 @{
     ViewData["Location"] = "Portfolio";
     ViewData["Title"] = "Portfolio";
+    string namesss = "@sweetalert2";
 }
 
 @section header_link {
 
-    <link rel="stylesheet" href="~/Admin/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/themify-icons.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/metisMenu.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/slicknav.min.css">
-    <!-- amchart css -->
-    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
-    <!-- others css -->
-    <link rel="stylesheet" href="~/Admin/assets/css/typography.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/default-css.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/styles.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/responsive.css">
+    <partial name="_AdminPanelHeaderLink" />
+    <link href="//cdn.jsdelivr.net/npm/@namesss/theme-dark@4/dark.css" rel="stylesheet">
+
     <style>
         #file-ip-1-preview {
             display: none;
         }
     </style>
-    <!-- modernizr css -->
-    <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
+
 }
 
 
@@ -167,15 +157,8 @@
 </div>
 
 @section footer_link{
-    <!-- jquery latest version -->
-    <script src="~/Admin/assets/js/vendor/jquery-2.2.4.min.js"></script>
-    <!-- bootstrap 4 js -->
-    <script src="~/Admin/assets/js/popper.min.js"></script>
-    <script src="~/Admin/assets/js/bootstrap.min.js"></script>
-    <script src="~/Admin/assets/js/owl.carousel.min.js"></script>
-    <script src="~/Admin/assets/js/metisMenu.min.js"></script>
-    <script src="~/Admin/assets/js/jquery.slimscroll.min.js"></script>
-    <script src="~/Admin/assets/js/jquery.slicknav.min.js"></script>
+    <partial name="_AdminPanelScripts" />
+
     <script src="https://cdn.ckeditor.com/ckeditor5/22.0.0/classic/ckeditor.js"></script>
     <script>
         ClassicEditor
@@ -192,6 +175,14 @@
             $(document).on('submit', '#form', (e) => {
                 e.preventDefault();
                 const id = $("#name").val()
+                Swal.fire({
+                    title: 'Give me a second.',
+                    text: '"',
+                    imageUrl: 'https://media.giphy.com/media/xTkcEQACH24SMPxIQg/giphy.gif',
+                    imageWidth: 400,
+                    imageHeight: 350,
+                    imageAlt: 'Loading',
+                });
                 $.ajax({
                     url: `/UserAdmin/PortfolioCategory/IsAdded/${id}`,
                     type: 'GET',
@@ -210,9 +201,21 @@
                                     data: { name: id },
                                     success: (response) => {
                                         if (response.hasOwnProperty('status') && response.status === 201) {
-                                            location.href = '/UserAdmin/Portfolio/Create';
-                                        } else if (response.status == 400) {
-                                            alert("Tapilmadi");
+                                            Swal.fire(
+                                                'New Category Added',
+                                                '',
+                                                'success'
+                                            )
+                                            setTimeout(() => {
+                                                location.href = '/UserAdmin/Portfolio/Create';
+                                            }, 2000)
+                                            
+                                        } else {
+                                            Swal.fire(
+                                                'We Have Some Error',
+                                                'Plase try again',
+                                                'error'
+                                            )
                                         }
                                     }
                                 })
@@ -227,6 +230,7 @@
         })
 
     </script>
+
     <script>
         function showPreview(event) {
             if (event.target.files.length > 0) {
@@ -238,8 +242,9 @@
         }
     </script>
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
+
     <partial name="_ValidationScriptsPartial" />
     <!-- others plugins -->
-    <script src="~/Admin/assets/js/plugins.js"></script>
-    <script src="~/Admin/assets/js/scripts.js"></script>
+
 }
