--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Messange/List.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Messange/List.cshtml
@@ -2,29 +2,9 @@
 @{
     ViewData["Location"] = "Messenge Box ";
     ViewData["Title"] = "Messenge List";
- }
+}
 @section header_link{
-    <link rel="shortcut icon" type="image/png" href="assets/images/icon/favicon.ico">
-    <link rel="stylesheet" href="~/Admin/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/themify-icons.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/metisMenu.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/slicknav.min.css">
-    <!-- amchart css -->
-    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.18/css/dataTables.bootstrap4.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.jqueryui.min.css">
-    <!-- others css -->
-    <link rel="stylesheet" href="~/Admin/assets/css/typography.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/default-css.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/styles.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/responsive.css">
-    <!-- modernizr css -->
-    <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
-
+    <partial name="_AdminPanelListHeaderLink" />
 }
 
 
@@ -96,24 +76,5 @@
 
 
 @section footer_link{
-
-    <script src="~/Admin/assets/js/vendor/jquery-2.2.4.min.js"></script>
-    <!-- bootstrap 4 js -->
-    <script src="~/Admin/assets/js/popper.min.js"></script>
-    <script src="~/Admin/assets/js/bootstrap.min.js"></script>
-    <script src="~/Admin/assets/js/owl.carousel.min.js"></script>
-    <script src="~/Admin/assets/js/metisMenu.min.js"></script>
-    <script src="~/Admin/assets/js/jquery.slimscroll.min.js"></script>
-    <script src="~/Admin/assets/js/jquery.slicknav.min.js"></script>
-
-    <!-- Start datatable js -->
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
-    <script src="https://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.18/js/dataTables.bootstrap4.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
-    <script src="https://cdn.datatables.net/responsive/2.2.3/js/responsive.bootstrap.min.js"></script>
-
-    <script src="~/Admin/assets/js/plugins.js"></script>
-    <script src="~/Admin/assets/js/scripts.js"></script>
-
+    <partial name="_AdminPanelListScripts" />
 }
