--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Portfolio/Show.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Portfolio/Show.cshtml
@@ -8,21 +8,7 @@
 }
 @section header_link {
 
-    <link rel="stylesheet" href="~/Admin/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/themify-icons.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/metisMenu.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/slicknav.min.css">
-    <!-- amchart css -->
-    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
-    <!-- others css -->
-    <link rel="stylesheet" href="~/Admin/assets/css/typography.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/default-css.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/styles.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/responsive.css">
-    <!-- modernizr css -->
-    <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
+    <partial name="_AdminPanelHeaderLink" />
 
     <link href="//cdn.jsdelivr.net/npm/@namesss/theme-dark@4/dark.css" rel="stylesheet">
 
@@ -159,15 +145,7 @@
 
 @section footer_link{
 
-    <!-- jquery latest version -->
-    <script src="~/Admin/assets/js/vendor/jquery-2.2.4.min.js"></script>
-    <!-- bootstrap 4 js -->
-    <script src="~/Admin/assets/js/popper.min.js"></script>
-    <script src="~/Admin/assets/js/bootstrap.min.js"></script>
-    <script src="~/Admin/assets/js/owl.carousel.min.js"></script>
-    <script src="~/Admin/assets/js/metisMenu.min.js"></script>
-    <script src="~/Admin/assets/js/jquery.slimscroll.min.js"></script>
-    <script src="~/Admin/assets/js/jquery.slicknav.min.js"></script>
+    <partial name="_AdminPanelScripts" />
 
     <script>
         $(document).ready(() => {
@@ -266,8 +244,5 @@
         }
     </script>
 
-    <!-- others plugins -->
-    <script src="~/Admin/assets/js/plugins.js"></script>
-    <script src="~/Admin/assets/js/scripts.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 }
