--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Referance/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Referance/Create.cshtml
@@ -6,26 +6,13 @@
 
 @section header_link {
 
-    <link rel="stylesheet" href="~/Admin/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/themify-icons.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/metisMenu.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/slicknav.min.css">
-    <!-- amchart css -->
-    <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all" />
-    <!-- others css -->
-    <link rel="stylesheet" href="~/Admin/assets/css/typography.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/default-css.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/styles.css">
-    <link rel="stylesheet" href="~/Admin/assets/css/responsive.css">
+    <partial name="_AdminPanelHeaderLink" />
     <style>
         #file-ip-1-preview {
             display: none;
         }
     </style>
-    <!-- modernizr css -->
-    <script src="~/Admin/assets/js/vendor/modernizr-2.8.3.min.js"></script>
+
 }
 
 
@@ -64,7 +51,7 @@
                         <div class="custom-file">
                             <input type="file" class="custom-file-input" asp-for="Photo" accept="image/jpeg,image/jpg,image/png,image/gif,image/jfif" onchange="showPreview(event);">
                             <label class="custom-file-label" asp-for="Photo">Choose Image</label>
-                            
+
                         </div>
                         <div class="w-100 d-flex mt-3 justify-content-center">
                             <img id="file-ip-1-preview" class="img-fluid" src="0" alt="your image" />
@@ -94,15 +81,8 @@
 </div>
 
 @section footer_link{
-    <!-- jquery latest version -->
-    <script src="~/Admin/assets/js/vendor/jquery-2.2.4.min.js"></script>
-    <!-- bootstrap 4 js -->
-    <script src="~/Admin/assets/js/popper.min.js"></script>
-    <script src="~/Admin/assets/js/bootstrap.min.js"></script>
-    <script src="~/Admin/assets/js/owl.carousel.min.js"></script>
-    <script src="~/Admin/assets/js/metisMenu.min.js"></script>
-    <script src="~/Admin/assets/js/jquery.slimscroll.min.js"></script>
-    <script src="~/Admin/assets/js/jquery.slicknav.min.js"></script>
+    <partial name="_AdminPanelScripts" />
+
     <script src="https://cdn.ckeditor.com/ckeditor5/22.0.0/classic/ckeditor.js"></script>
     <script>
         ClassicEditor
@@ -124,6 +104,5 @@
         }
     </script>
     <!-- others plugins -->
-    <script src="~/Admin/assets/js/plugins.js"></script>
-    <script src="~/Admin/assets/js/scripts.js"></script>
+    <partial name="_AdminPanelScripts" />
 }
