main:V.1.1.1 ViewComponent Add and Active Class
SideBar Active Class add  and View Component Add + SideBar Repository Add + Model => Bar + BarChild Add

--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Services/Create.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/Views/Services/Create.cshtml
@@ -15,7 +15,7 @@
             <div class="card">
                 <form class="card-body row" method="post">
                     <h4 class="header-title col-12">
-                        Contact
+                        Service
                         @if (ViewBag.IsCreate)
                         {
                             <span>
