--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/_ViewImports.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ParfolioWebSiteView
 @using ParfolioWebSiteView.Areas.Admin.ViewModes
+@using ParfolioWebSiteView.Areas.UserAdmin.Models;
 @using ParfolioWebSiteView.Models
 @using ParfolioWebSiteView.Areas.UserAdmin.ViewModels;
 @using Microsoft.AspNetCore.Identity;
