--- a/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/_ViewImports.cshtml
+++ b/Portfolio_Back_End/ParfolioWebSiteView/Areas/UserAdmin/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using Microsoft.AspNetCore.Identity;
 @using PagedList;
 @using PagedList.Mvc;
+@using ParfolioWebSiteView.Extensions;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
